--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -2,10 +2,10 @@
 
 @use 'fieldnotes';
 @use 'forecast';
-@use 'historical-events';
+@use 'historicalEvents';
 @use 'mainshock';
 @use 'pager';
-@use 'pager-exposures';
+@use 'pagerExposures';
 @use 'shakeAlert';
 @use 'shakemapStations';
 @use 'significantEqs';
