--- a/src/htdocs/css/util/_index.scss
+++ b/src/htdocs/css/util/_index.scss
@@ -1,8 +1,11 @@
 @use 'controls';
 
+@use 'datetime';
 @use 'flatpickr';
 @use 'icons';
 @use 'impactBubbles';
 @use 'lightbox';
 @use 'loaders';
+@use 'modes';
 @use 'plotly';
+@use 'props';
