--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -1,59 +1,40 @@
-#plotsPane {
-  height: 100%;
+@layer default {
+  #plotsPane {
+    margin-top: -2.25rem;
 
-  div {
-    &.cumulative {
-      height: 33vh;
+    div {
+      &.cumulative {
+        height: 33vh;
+      }
+
+      &.hypocenters {
+        height: 76vh;
+      }
+
+      &.magtime {
+        height: 33vh;
+      }
     }
 
-    &.hypocenters {
-      height: 76vh;
+    .container {
+      display: flex;
+      flex-direction: column;
     }
 
-    &.magtime {
-      height: 33vh;
+    .hide {
+      display: none; // empty plots + their associated headers
     }
-  }
 
-  h3 {
-    margin: 1.625rem 0 1.25rem;
-  }
+    // Rendering order of Features
 
-  output:after {
-    content: ' km';
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .hide { // plots + associated headers
-    display: none;
-  }
-
-  .js-plotly-plot {
-    width: 100%;
-  }
-
-  /* Rendering order of Features */
-
-  .aftershocks,
-  .dd-aftershocks {
-    order: 0;
-
-    h2 {
-      margin-top: 0;
+    .aftershocks,
+    .dd-aftershocks {
+      order: 1;
     }
-  }
 
-  .foreshocks,
-  .dd-foreshocks {
-    order: 1;
-  }
-
-  .historical,
-  .dd-historical {
-    order: 2;
+    .historical,
+    .dd-historical {
+      order: 2;
+    }
   }
 }
