--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -1,26 +1,59 @@
-@use 'sass:color';
+@use '../util/opt/variables' as *;
 
-@use '../util/variables' as *;
+@layer default {
+  #timeframe {
+    margin-bottom: .5rem;
+  }
 
-#summaryPane {
   .forecast {
-    h3 {
-      margin-top: 0;
-    }
-    h4 {
-      margin: 0;
+    abbr {
+      display: inline-block;
+      font-size: $font-size-smaller;
+      font-weight: 300;
+      margin-top: .375rem;
+      transition: $effect-duration ease-in-out {
+        property: border-color, color;
+      };
     }
 
-    #timeframe {
-      margin-bottom: 1.5rem;
+    h4 {
+      align-items: baseline;
+      column-gap: .375rem;
+      display: flex;
+      margin: 1.25rem 0 0;
+    }
+
+    h5 {
+      background: var(--bg-color-darker);
+      border-radius: $button-border-radius $button-border-radius 0 0;
+      margin: 0;
+      padding: .125rem 0;
+      transition: $effect-duration ease-in-out {
+        property: background, color;
+      };
+    }
+
+    ol {
+      display: flex;
+      flex-wrap: wrap;
+
+      > li {
+        margin: 1rem 1rem 0 0;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
 
     .params {
-      margin: .5rem 0 1.5rem;
+      margin: .75rem 0 1.25rem;
       max-height: 35rem;
       opacity: 1;
       overflow: hidden;
-      transition: all $effect-slide-duration ease-in-out;
+      transition: $effect-slide-duration ease-in-out {
+        property: margin, max-height, opacity;
+      };
 
       &.hide {
         margin: 0;
@@ -35,30 +68,15 @@
 
       dd,
       dt {
-        line-height: 1.75;
-        transition: all $effect-slide-duration ease-in-out;
+        transition: line-height $effect-slide-duration ease-in-out;
       }
+
       dd {
         max-width: 7rem;
       }
     }
 
     .probabilities {
-      line-height: 1;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-
-      &+ h4 {
-        align-items: baseline;
-        display: flex;
-        margin-top: 1.25rem;
-
-        a {
-          margin-left: .375rem;
-        }
-      }
-
       a {
         border: 1px solid var(--border-color);
         border-radius: $button-border-radius;
@@ -66,72 +84,43 @@
         display: block;
         text-align: center;
         text-decoration: none;
-        transition: all $effect-off-duration ease-in;
+        transition: border-color $effect-duration ease-in-out;
         width: 6rem;
 
         &:hover {
           border-color: var(--accent-color);
           color: var(--text-color-darker);
-          transition: all $effect-on-duration ease-out;
+          transition-duration: $effect-on-duration;
 
           abbr {
             border-color: var(--text-color-lightest);
             color: var(--text-color-darker);
-            transition: all $effect-on-duration ease-out;
+            transition-duration: $effect-on-duration;
           }
 
           h5 {
             background: var(--accent-color-lightest);
             color: var(--text-color-darker);
-            transition: all $effect-on-duration ease-out;
+            transition-duration: $effect-on-duration;
+          }
+
+          .probability {
+            transition-duration: $effect-on-duration;
           }
         }
 
-        &:active {
-          h5 {
-            background: var(--accent-color);
-            color: var(--bg-color);
-          }
-        }
-      }
-
-      abbr {
-        display: inline-block;
-        font-size: .8125rem;
-        font-weight: 300;
-        margin-top: 5px;
-        transition: all $effect-off-duration ease-in;
-      }
-
-      h5 {
-        background: var(--bg-color-darker);
-        border-radius: $button-border-radius $button-border-radius 0 0;
-        color: var(--text-color);
-        font-size: 1.25rem;
-        margin: 0;
-        padding: 4px 0;
-        transition: all $effect-off-duration ease-in;
-      }
-
-      ol {
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-
-        > li {
-          margin-right: 1rem;
-
-          &:last-child {
-            margin: 0;
-          }
+        &:active h5 {
+          background: var(--accent-color);
+          color: var(--bg-color);
         }
       }
 
       ul {
-        list-style: none;
-        margin: .75rem 0 1rem;
-        padding: 0;
+        margin: .875rem 0;
+
+        li {
+          line-height: 1;
+        }
       }
 
       .hide {
@@ -140,15 +129,8 @@
     }
 
     .probability {
-      font: 1.25rem $font-family-mmi;
+      font: 1.25rem $font-family-buttons;
+      transition: color $effect-duration ease-in-out;
     }
   }
-}
-
-/* Toggle between user/UTC time
---------------------------------------------- */
-
-body.user .forecast time.utc,
-body.utc .forecast time.user {
-  display: none;
 }
