--- a/src/htdocs/css/features/_historicalEvents.scss
+++ b/src/htdocs/css/features/_historicalEvents.scss
@@ -1,21 +1,21 @@
-@use '../util/variables' as *;
+@use '../util/opt/variables' as *;
 
-#summaryPane {
-  .historical,
-  .dd-historical {
-    container-type: inline-size;
+@layer default {
+  #summaryPane {
+    .historical,
+    .dd-historical {
+      container-type: inline-size; // parent container
+    }
   }
 
   .historical-events {
     max-width: 100%;
 
     > div {
-      align-items: flex-start;
       display: flex;
       flex-wrap: wrap;
       gap: 2rem 3rem;
-      margin-top: 1.5rem;
-      padding-bottom: .5rem;
+      margin-bottom: .25rem;
 
       div {
         max-width: 100%;
@@ -23,28 +23,23 @@
       }
     }
 
-    h3 {
-      margin-top: 0;
-    }
-
     .mmi {
       align-items: center;
       display: flex;
       gap: 0 .375rem;
+      padding: 0 0 0 .5rem;
     }
-  }
 
-  @container (min-width: calc(2 * #{$panel-width} + 1rem))
-    and (max-width: calc(3 * #{$panel-width} + 2rem)) {
-      .historical-events {
+    @container
+      (min-width: calc(2 * #{$panel-width} + 1rem)) and
+      (max-width: calc(3 * #{$panel-width} + 2rem)) {
         width: calc(2 * $panel-width + 1rem);
       }
-    }
 
-  @container (min-width: #{$panel-width})
-    and (max-width: calc(2 * #{$panel-width} + 1rem)) {
-      .historical-events {
+    @container
+      (min-width: #{$panel-width}) and
+      (max-width: calc(2 * #{$panel-width} + 1rem)) {
         width: $panel-width;
       }
-    }
+  }
 }
