--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -1,110 +1,190 @@
-@use 'sass:color';
+@use '../util/opt/mixins' as *;
+@use '../util/opt/variables' as *;
 
-@use '../util/mixins' as *;
-@use '../util/variables' as *;
+@layer default {
+  #summaryPane {
+    .details {
+      line-height: 1;
+      max-width: 100%;
+      padding: 1.125rem 0 1.125rem 1rem;
+      overflow: scroll;
 
-#summaryPane {
-  .details {
-    max-width: 100%;
-    overflow: scroll;
-
-    li {
-      align-items: center;
-      border-right: 1px solid var(--border-color-lighter);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      list-style: none;
-      margin: 0;
-      padding: 0 1rem;
-
-      &:first-child {
-        padding-left: .25rem;
+      a.tsunami {
+        height: 2rem;
       }
 
-      &:last-child {
-        border: none;
-        padding-right: 1.25rem;
+      li {
+        align-items: center;
+        border-right: 1px solid var(--border-color-lighter);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 0;
+        padding: 0 1rem;
+
+        &.feature,
+        &.tsunami {
+          cursor: pointer;
+        }
+
+        &.mag {
+          padding-left: .25rem;
+        }
+
+        &.updated {
+          border: none;
+          padding-right: 1.25rem;
+        }
+
+        > strong {
+          @include labels;
+
+          padding-bottom: .375rem;
+        }
       }
 
-      &.feature {
-        cursor: pointer;
-      }
-
-      > small,
-      > span {
+      small,
+      span {
         white-space: nowrap;
       }
-      > small {
+
+      small {
         color: var(--text-color-darker);
-        font-size: .8125rem;
+        font-size: $font-size-smaller;
         font-weight: 300;
-        letter-spacing: 0.015rem;
-        line-height: 1.5;
+        letter-spacing: .015rem;
+        margin-top: .25rem;
       }
-      > span {
+
+      span {
         font-size: 1.125rem;
+
+        span {
+          display: none; // depth unit
+        }
       }
 
-      > strong {
-        @include labels;
-
-        line-height: 1.5;
-        padding-bottom: .25rem;
+      ul {
+        display: flex;
       }
-    }
 
-    ul {
-      display: flex;
-      margin: 0;
-      padding: 0;
-    }
+      .impact-bubble {
+        line-height: normal;
+        width: 4.25rem;
 
-    .date,
-    .depth,
-    .time {
-      span {
-        margin-top: -.125rem;
+        abbr {
+          display: none;
+        }
       }
-    }
 
-    .depth span span {
-      display: none;
-    }
+      .location {
+        position: relative;
 
-    .impact-bubble {
-      width: 4.25rem;
-
-      abbr {
-        display: none;
+        span {
+          font-size: 1rem;
+          line-height: 1.25;
+          position: absolute;
+          text-align: center;
+          top: 1.5rem;
+          white-space: normal;
+        }
       }
-    }
 
-    .location {
-      position: relative;
-
-      span {
-        font-size: 1rem;
-        line-height: 1.25;
-        position: absolute;
-        text-align: center;
-        top: 1.625rem;
-        white-space: normal;
-      }
-    }
-
-    .mag {
-      span {
+      .mag span {
         font-size: 1.75rem;
-        line-height: 1;
+      }
+    }
+
+    .download {
+      button:after {
+        content: 'Event Summary';
+      }
+
+      button + p {
+        color: var(--text-color-lighter);
+        font-size: $font-size-smaller;
+        margin: 1rem 0 0;
+      }
+    }
+
+    .links ul {
+      margin-bottom: .25rem;
+    }
+
+    .links,
+    .nearby-cities {
+      li {
+        margin-top: .5rem;
+      }
+
+      ul {
+        line-height: $line-height-alt;
+        margin-top: 1.375rem;
+      }
+    }
+
+    .mainshock {
+      .bubble {
+        margin: 1rem .5rem 0;
+
+        &.details {
+          margin: 0 0 -.25rem 0 ;
+        }
+      }
+
+      .thumbs {
+        display: flex;
+      }
+    }
+
+    .notice {
+      margin-top: .5rem;
+      max-width: none;
+    }
+
+    .pager-exposures {
+      cursor: pointer;
+
+      table {
+        width: 100%;
+      }
+    }
+
+    .pager-loss {
+      cursor: pointer;
+
+      h4:nth-of-type(2) {
+        margin-top: 1.5rem;
+      }
+
+      img {
+        border-radius: $content-border-radius;
+        max-width: 100%;
+      }
+    }
+
+    .products {
+      align-items: flex-start;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -.5rem;
+
+      div {
+        max-width: 100%;
+        width: $panel-width;
+
+        &.tectonic {
+          width: calc(2 * $panel-width + 1rem);
+        }
+      }
+
+      h4 {
+        margin: .125rem 0 0;
+        text-align: center;
       }
     }
 
     .shake-alert {
-      a {
-        line-height: 1;
-      }
-
       i {
         color: #03865a;
         font-size: 1.5rem;
@@ -119,25 +199,65 @@
       }
 
       sup {
-        color: #bbb;
-        font-size: .75rem;
-        position: absolute;
-        right: -.75rem;
+        display: none;
       }
     }
 
-    .status {
-      small {
-        text-transform: capitalize;
-      }
+    .status small {
+      text-transform: capitalize;
     }
 
-    .tsunami {
-      height: 2.125rem;
-      top: -13px;
+    .tectonic {
+      line-height: $line-height; // <p> tags missing sometimes
+
+      h1,
+      h2 {
+        display: none;
+      }
 
       img {
-        border-radius: $button-border-radius;
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+      }
+
+      p:last-child {
+        margin-bottom: .25rem;
+      }
+    }
+
+    .thumbs {
+      &.hide {
+        display: none;
+      }
+
+      @include impact-borders;
+
+      flex-wrap: wrap;
+      padding: 1rem .5rem 0;
+
+      a,
+      h4 {
+        cursor: pointer;
+      }
+
+      a {
+        display: block;
+        margin-bottom: 1rem;
+      }
+
+      h4 {
+        padding-bottom: .5rem;
+      }
+
+      canvas,
+      img {
+        max-width: 100%;
+      }
+
+      div {
+        padding: 0 .5rem;
+        width: 50%;
       }
     }
 
@@ -145,247 +265,37 @@
       position: relative;
 
       em {
-        color: var(--text-color);
         display: block;
-        font-size: 1.125rem;
+        font-size: 1rem;
         font-style: normal;
         margin-top: .125rem;
       }
 
       span {
-        color: var(--text-color-lighter);
-        font-size: .625rem;
-        line-height: 1;
+        font-size: $font-size-smallest;
         position: absolute;
         text-align: center;
-        top: 1.5rem;
+        top: 1.375rem;
       }
     }
   }
 
-  .download {
-    button {
-      margin: 0;
-      padding-bottom: .1875rem;
-      padding-top: .1875rem;
-
-      &:after {
-        content: 'Event Summary';
-      }
-    }
-
-    button + p {
-      font-size: $font-size-smaller;
-      margin: 1rem 0 0;
-    }
-  }
-
-  .mainshock {
-    .bubble {
-      margin: 1rem .5rem 0;
-
-      &.details {
-        margin: 0 0 -.4375rem 0 ;
-        padding-right: 0;
-      }
-    }
-  }
-
-  .links,
-  .nearby-cities {
-    li {
-      margin: .125rem 0;
-    }
-
-    ul {
-      list-style: none;
-      margin: 1.25rem 0 0 0;
-      padding: 0;
-    }
-  }
-
-  .notice {
-    margin-top: .75rem;
-    max-width: none;
-  }
-
-  .pager-exposures {
-    cursor: pointer;
-
-    table {
-      width: 100%;
-    }
-  }
-
-  .pager-loss {
-    cursor: pointer;
-
-    &.bubble {
-      padding: 1rem .5rem;
-    }
-
-    h4 {
-      margin-bottom: 0;
-
-      &:nth-of-type(2) {
-        margin-top: 1.5rem;
-      }
-    }
-
-    img {
-      max-width: 100%;
-    }
-  }
-
-  .products {
-    align-items: flex-start;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -.5rem;
-
-    div {
-      max-width: 100%;
-      width: $panel-width;
-
-      &.tectonic {
-        width: calc(2 * $panel-width + 1rem);
-      }
-    }
-
-    h3 {
-      margin-top: 0;
-    }
-
-    h4 {
-      margin-top: .125rem;
-      text-align: center;
-    }
-  }
-
-  .tectonic {
-    h1,
+  /**
+   * Double-difference label in header
+   * (scoped to body.mainshock so loader is not affected)
+   */
+  body.mainshock #summaryPane .mainshock {
     h2 {
-      display: none;
-    }
+      flex-direction: column;
 
-    img {
-      display: block;
-      margin: 0 auto;
-      max-width: 100%;
-    }
+      span {
+        font-size: 1.2rem;
+        margin-bottom: -.25rem;
 
-    p:last-child {
-      margin-bottom: .25rem;
-    }
-  }
-
-  .thumbs {
-    flex-wrap: wrap;
-    padding: 1rem .5rem 0;
-
-    &.bubble {
-      display: flex;
-    }
-
-    a {
-      display: block;
-      margin-bottom: 1rem;
-    }
-    a,
-    h4 {
-      cursor: pointer;
-    }
-    h4 {
-      margin-bottom: 0;
-      padding-bottom: .5rem;
-    }
-
-    canvas,
-    img {
-      max-width: 100%;
-    }
-    img {
-      border: 2px solid;
-      border-radius: $button-border-radius;
-    }
-
-    div {
-      padding: 0 .5rem;
-      width: 50%;
-    }
-  }
-}
-
-/* Colored borders around thumbnails (and their associated Lightbox images)
---------------------------------------------- */
-
-#dyfi,
-#shakemap,
-#summaryPane .thumbs {
-  img {
-    padding: 2px;
-
-    &.mmiN\/A {
-      border-color: $mmi-NAcolor;
-    }
-    &.mmiI {
-      border-color: var(--border-color-lighter);
-    }
-    &.mmiII {
-      border-color: $mmiII-color;
-    }
-    &.mmiIII {
-      border-color: $mmiIII-color;
-    }
-    &.mmiIV {
-      border-color: $mmiIV-color;
-    }
-    &.mmiV {
-      border-color: $mmiV-color;
-    }
-    &.mmiVI {
-      border-color: $mmiVI-color;
-    }
-    &.mmiVII {
-      border-color: $mmiVII-color;
-    }
-    &.mmiVIII {
-      border-color: $mmiVIII-color;
-    }
-    &.mmiIX {
-      border-color: $mmiIX-color;
-    }
-    &.mmiX,
-    &.mmiX\+,
-    &.mmiXI,
-    &.mmiXII {
-      border-color: $mmiX-color;
-    }
-  }
-}
-
-/* Double-difference header (scoped to body.mainshock so loader not affected)
---------------------------------------------- */
-
-body.mainshock #summaryPane .mainshock {
-  h2 {
-    flex-direction: column;
-
-    span {
-      font-size: 1.2rem;
-      margin-bottom: -3px;
-
-      &.hide {
-        display: none;
+        &.hide {
+          display: none;
+        }
       }
     }
   }
-}
-
-/* Toggle between user/UTC time
---------------------------------------------- */
-
-body.user #summaryPane li.utc,
-body.utc #summaryPane li.user {
-  display: none;
 }
