--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -1,80 +1,84 @@
-@use '../util/variables' as *;
+@use '../util/opt/variables' as *;
 
-#pager {
-  h3 .impact-bubble {
-    width: 4.25rem;
-  }
-
-  img {
-    max-width: 100%;
-    width: calc($panel-width - 1rem);
-  }
-
-  p {
-    max-width: 1200px;
-  }
-
-  .exposure {
-    > div {
-      align-items: flex-start;
-      display: flex;
-      flex-flow: row wrap;
-      gap: 1.5rem 2.5rem;
-    }
-
-    h4 {
-      margin: 0 0 1.25rem;
+@layer default {
+  #pager {
+    h3 .impact-bubble {
+      width: 4.25rem;
     }
 
     img {
-      margin-top: .5rem;
+      max-width: 100%;
+      width: calc($panel-width - 1rem);
     }
 
     p {
-      margin: 0;
+      max-width: calc($panel-width * 3);
     }
 
-    table {
-      width: calc($panel-width - 2rem);
+    .exposure {
+      > div {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem 2.5rem;
+      }
+
+      h4 {
+        margin-bottom: 1.25rem;
+      }
+
+      img {
+        margin-top: .5rem;
+      }
+
+      p {
+        margin: 0;
+      }
+
+      table {
+        width: calc($panel-width - 2rem);
+      }
     }
-  }
 
-  .loss {
-    width: calc($panel-width - 1rem);
+    .loss {
+      width: calc($panel-width - 1rem);
 
-    h4 {
-      margin: 1.5rem 0 0;
+      h4 {
+        margin-bottom: 0;
+
+        &:nth-of-type(2) {
+          margin-top: 1.5rem;
+        }
+      }
+
+      img {
+        border-radius: $content-border-radius;
+      }
+
+      p {
+        margin-top: 0;
+      }
     }
 
-    p {
-      margin: 0;
+    .wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem 1.5rem;
     }
-  }
 
-  .wrapper {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 2rem 1.5rem;
-
-    h4:first-child {
-      margin-top: .5rem;
-    }
-  }
-
-  @media only screen
-    and (max-width: 1327px) {
+    @media only screen and (max-width: calc(83rem - 1px)) {
       .exposure {
         order: 1;
       }
+
       .loss {
         order: 2;
       }
     }
 
-  @media only screen
-    and (max-width: 416px) {
+    @media only screen and (max-width: 26rem) {
       .exposure table {
         width: 100%;
       }
     }
+  }
 }
