--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -1,136 +1,130 @@
-@use 'mixins' as *;
-@use 'variables' as *;
+@use 'opt/mixins' as *;
+@use 'opt/variables' as *;
 
-.lightbox {
-  align-items: center;
-  background: rgba(0, 0, 0, .93);
-  bottom: 0;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  opacity: 1;
-  padding: 1rem 2.5rem;
-  position: fixed;
-  right: 0;
-  top: 0;
-  transition: opacity .25s ease-in-out;
-  visibility: visible;
-  z-index: 10000;
-
-  &.hide {
-    opacity: 0;
-    visibility: hidden;
-
-    .button {
-      transition: none;
-    }
-
-    .close,
-    .options {
-      display: none;
-    }
-  }
-
-  > * {
-    cursor: auto;
-  }
-
-  dl.props:not(.alt) {
-    margin-top: 2rem;
-  }
-
-  h3 {
+@layer default {
+  .lightbox {
     align-items: center;
-    background: linear-gradient(var(--bg-color), var(--bg-color-alpha));
-    font-size: 1.625rem;
-    gap: 0 .5rem;
-    margin: 0;
-    padding: 1rem 0;
-    position: sticky;
+    background: rgba(0, 0, 0, .93);
+    bottom: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    opacity: 1;
+    padding: 1rem 2.5rem;
+    position: fixed;
+    right: 0;
     top: 0;
-    z-index: 10001;
+    transition: opacity $effect-duration ease-in-out;
+    visibility: visible;
+    z-index: 10000;
 
-    .button {
-      border: 1px solid var(--accent-color);
-      display: flex;
-      font-weight: bold;
-      justify-content: center;
-      padding: .25rem 0;
-      width: 3rem;
+    &.hide {
+      opacity: 0;
+      visibility: hidden;
 
-      &:active {
-        background: var(--accent-color);
-        color: var(--bg-color);
-        text-shadow: var(--button-text-shadow);
+      .button {
+        transition: none;
+      }
+
+      .close,
+      .options {
+        display: none;
       }
     }
-  }
 
-  h4 {
-    font-size: 1.375rem;
-    margin: 1.75rem 0 .75rem;
-  }
-
-  .close {
-    position: sticky;
-    top: 0;
-    z-index: 10002;
-  }
-
-  .container {
-    background: var(--bg-color);
-    border-radius: $content-border-radius;
-    max-height: 100%;
-    max-width: 100%;
-    overflow: scroll;
-    padding: 0 1.5rem 1rem;
-    position: relative;
-
-    // Hide scrollbars
-    -ms-overflow-style: none; // IE, Edge
-    scrollbar-width: none; // Firefox
-
-    &::-webkit-scrollbar {
-      display: none; // Chrome, Safari, and Opera
+    > * {
+      cursor: auto;
     }
-  }
 
-  .content > h4:first-child {
-    margin-top: .25rem;
-  }
-
-  .icon-close {
-    @include close;
-
-    position: absolute;
-    right: -1.375rem;
-    top: .125rem;
-  }
-
-  .status {
-    text-transform: capitalize;
-
-    i {
-      margin-left: .25rem;
+    dl.props:not(.alt) {
+      margin-top: 1.5rem;
     }
-  }
 
-  @media only screen
-    and (max-width: $breakpoint-phone-width) {
+    h3 {
+      align-items: center;
+      background: linear-gradient(var(--bg-color), var(--bg-color-alpha));
+      font-size: 1.625rem;
+      gap: 0 .5rem;
+      margin: 0;
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 10001;
+
+      .button {
+        border: 1px solid var(--accent-color);
+        display: flex;
+        justify-content: center;
+        padding: .25rem 0;
+        width: 2rem;
+
+        &:active {
+          background: var(--accent-color);
+          color: var(--bg-color);
+          text-shadow: var(--button-text-shadow);
+        }
+      }
+    }
+
+    h4 {
+      font-size: 1.375rem;
+      margin: 1.5rem 0 .75rem;
+
+      &:first-child {
+        margin-top: .25rem;
+      }
+    }
+
+    .close {
+      position: sticky;
+      top: 0;
+      z-index: 10002;
+    }
+
+    .container {
+      background: var(--bg-color);
+      border-radius: $content-border-radius;
+      max-height: 100%;
+      max-width: 100%;
+      overflow: scroll;
+      padding: 0 1.5rem 1rem;
+      position: relative;
+
+      // Hide scrollbars
+      -ms-overflow-style: none; // IE, Edge
+      scrollbar-width: none; // Firefox
+
+      &::-webkit-scrollbar {
+        display: none; // Chrome, Safari, and Opera
+      }
+    }
+
+    .icon-close {
+      @include close-button;
+
+      right: -22px;
+      top: 2px;
+    }
+
+    .status {
+      text-transform: capitalize;
+
+      i {
+        margin-left: .25rem;
+      }
+    }
+
+    @media only screen and (max-width: $breakpoint-phone-width) {
       padding: 0;
 
       .container {
         border-radius: 0;
       }
+
+      .icon-close {
+        margin: .5rem .5rem 0 0;
+      }
     }
-}
-
-
-/* Toggle between user/UTC time
---------------------------------------------- */
-
-body.user .lightbox time.utc,
-body.utc .lightbox time.user {
-  display: none;
+  }
 }
