--- a/src/htdocs/css/util/_loaders.scss
+++ b/src/htdocs/css/util/_loaders.scss
@@ -1,77 +1,81 @@
-.breather {
-  display: block;
-  position: relative;
+@layer default {
+  .breather {
+    display: block;
+    position: relative;
 
-  span {
-    animation: scale 1s infinite ease-in-out;
-    background: var(--text-color);
+    span {
+      animation: 1s ease-in-out infinite scale;
+      background: var(--text-color);
+      border-radius: 50%;
+      height: .8em;
+      left: .375em;
+      position: absolute;
+      top: -.7em;
+      width: .8em;
+    }
+  }
+
+  .ellipsis {
+    span {
+      animation: 1s linear infinite opacify;
+      display: inline-block;
+      font: 1.5rem georgia;
+      line-height: 1;
+
+      &:nth-child(1) {
+        padding-left: 3px;
+      }
+
+      &:nth-child(2) {
+        animation-delay: .2s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: .4s;
+      }
+    }
+  }
+
+  .spinner {
+    animation: .75s linear infinite rotate;
+    border: 5px solid var(--text-color-lighter);
     border-radius: 50%;
-    height: .8em;
-    left: .375em;
+    border-right-color: transparent;
+    display: block;
+    height: 20px;
+    left: 47%;
     position: absolute;
-    top: -.7em;
-    width: .8em;
+    top: 47%;
+    width: 20px;
+    z-index: 1000;
   }
-}
 
-.ellipsis {
-  span {
-    animation: opacify 1s infinite linear;
-    display: inline-block;
-    font: 1.5rem georgia;
-    line-height: .25;
-
-    &:nth-child(1) {
-      padding-left: 3px;
+  @keyframes opacify {
+    0%, 100% {
+      opacity: .1;
     }
-    &:nth-child(2) {
-      animation-delay: .2s;
-    }
-    &:nth-child(3) {
-      animation-delay: .4s;
+    20% {
+      opacity: 1;
     }
   }
-}
 
-.spinner {
-  animation: rotate 0.75s infinite linear;
-  border: 5px solid var(--text-color-lighter);
-  border-radius: 50%;
-  border-right-color: transparent;
-  display: block;
-  height: 20px;
-  left: 47%;
-  position: absolute;
-  top: 47%;
-  width: 20px;
-  z-index: 1000;
-}
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
-@keyframes opacify {
-  0%, 100% {
-    opacity: .1;
-  }
-  20% {
-    opacity: 1;
-  }
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes scale {
-  0% {
-    opacity: 1;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(1.0);
+  @keyframes scale {
+    0% {
+      opacity: 1;
+      transform: scale(0);
+    }
+    100% {
+      opacity: 0;
+      transform: scale(1.0);
+    }
   }
 }
