--- a/src/htdocs/css/util/controls/_slider.scss
+++ b/src/htdocs/css/util/controls/_slider.scss
@@ -1,6 +1,9 @@
-/* ---------------------------------------------
-   Range Sliders, adapted from:
-   https://css-tricks.com/sliding-nightmare-understanding-range-input/ */
+@use '../opt/variables' as *;
+
+/**
+ * Range Sliders, adapted from:
+ * https://css-tricks.com/sliding-nightmare-understanding-range-input/
+ */
 
 $thumb-d: 1.25rem;
 $track-bg: var(--control-color);
@@ -27,102 +30,103 @@ $dist: $track-w - $thumb-d;
   width: $track-w;
 }
 
-input[type='range'] {
-  background: transparent;
-  cursor: pointer;
-  flex: 1;
-  font: inherit;
-  margin: 0;
-  min-height: $thumb-d;
-  outline: 0;
-  padding: 0;
+@layer default {
+  input[type='range'] {
+    background: transparent;
+    cursor: pointer;
+    flex: 1;
+    font: inherit;
+    margin: 0;
+    min-height: $thumb-d;
+    outline: none;
+    padding: 0;
 
-  &,
-  &::-webkit-slider-thumb {
-    appearance: none
-  }
+    &,
+    &::-webkit-slider-thumb {
+      appearance: none
+    }
 
-  &::-moz-focus-outer {
-    border: 0;
-  }
+    &::-moz-focus-outer {
+      border: 0;
+    }
 
-  &::-moz-range-thumb {
-    @include thumb;
-  }
-  &::-ms-thumb {
-    margin-top: 0;
-    @include thumb;
-  }
-  &::-webkit-slider-thumb {
-    margin-top: .5 * ($track-h - $thumb-d);
-    @include thumb;
-  }
+    &::-moz-range-thumb {
+      @include thumb;
+    }
+    &::-ms-thumb {
+      margin-top: 0;
+      @include thumb;
+    }
+    &::-webkit-slider-thumb {
+      margin-top: .5 * ($track-h - $thumb-d);
+      @include thumb;
+    }
 
-  &::-moz-range-track {
-    @include track($track-c, $track-bg);
-  }
-  &::-ms-track {
-    @include track($track-c, $track-bg);
-  }
-  &::-webkit-slider-runnable-track {
-    @include track($track-c, $track-bg);
-  }
+    &::-moz-range-track {
+      @include track($track-c, $track-bg);
+    }
+    &::-ms-track {
+      @include track($track-c, $track-bg);
+    }
+    &::-webkit-slider-runnable-track {
+      @include track($track-c, $track-bg);
+    }
 
-  &::-ms-tooltip {
-    display: none;
-  }
+    &::-ms-tooltip {
+      display: none;
+    }
 
-  ~ output {
-    background: none;
-    color: var(--text-color);
-    display: block;
-    left: .5 * $thumb-d;
-    line-height: 1;
-    padding: .25rem .5rem;
-    position: absolute;
-    top: 0;
-    transform: translate(calc((var(--val) - var(--min)) / (var(--max) - var(--min)) * #{$dist} - 50%));
+    ~ output {
+      background: none;
+      display: block;
+      left: .5 * $thumb-d;
+      padding-top: .125rem;
+      position: absolute;
+      top: 0;
+      transform: translate(calc((var(--val) - var(--min)) / (var(--max) - var(--min)) * #{$dist} - 50%));
 
-    &:after {
-      content: '+';
+      &:after {
+        content: '+';
+      }
     }
   }
-}
 
-.inverted [type='range'] {
-  &::-moz-range-track {
-    @include track($track-bg, $track-c);
+  .inverted input[type='range'] {
+    &::-moz-range-track {
+      @include track($track-bg, $track-c);
+    }
+    &::-ms-track {
+      @include track($track-bg, $track-c);
+    }
+    &::-webkit-slider-runnable-track {
+      @include track($track-bg, $track-c);
+    }
   }
-  &::-ms-track {
-    @include track($track-bg, $track-c);
+
+  .slider {
+    align-items: center;
+    display: flex;
+    height: 4.5rem;
+    position: relative;
+    width: $track-w;
   }
-  &::-webkit-slider-runnable-track {
-    @include track($track-bg, $track-c);
+
+  .slider-container {
+    display: flex;
+
+    .max,
+    .min {
+      font-size: $font-size-smaller;
+      font-weight: 300;
+      margin-top: 1.625rem;
+    }
+
+    .max {
+      padding-left: .75rem;
+    }
+
+    .min {
+      padding-right: .75rem;
+    }
   }
-}
-
-.max,
-.min {
-  color: var(--text-color-lighter);
-  font-size: .9rem;
-  font-weight: 300;
-  margin-top: 1.5rem;
-}
-.max {
-  padding-left: .75rem;
-}
-.min {
-  padding-right: .75rem;
-}
-
-.slider {
-  align-items: center;
-  display: flex;
-  height: 4.5rem;
-  position: relative;
-  width: $track-w;
-}
-
-.slider-container {
-  display: flex;
 }
