--- a/src/htdocs/css/util/controls/_switch.scss
+++ b/src/htdocs/css/util/controls/_switch.scss
@@ -1,13 +1,13 @@
-@use '../variables' as *;
+@use '../opt/variables' as *;
 
-// TODO: remove #sideBar and instead use @layer to control specificity
-#sideBar {
-  input.switch {
-    display: none;
+@layer default {
+  .switch {
+    display: none; // input
 
     &:active + label {
       color: var(--text-color-darker);
     }
+
     &:checked + label {
       background: var(--accent-color);
       border-color: var(--accent-color);
@@ -15,18 +15,18 @@
       width: 1.25rem;
     }
 
-    + label {
+    + label { // switch
       background: var(--control-color);
       border: 2px solid var(--control-color);
       border-radius: 2rem;
       box-sizing: content-box;
-      color: var(--text-color);
       cursor: pointer;
-      font-size: 1.125rem;
-      margin: 0;
+      display: block;
       padding: 0;
       position: relative;
-      transition: all $effect-slide-duration ease-in-out;
+      transition: $effect-duration-shorter ease-in-out {
+        property: background, border-color, padding, width;
+      };
       width: 2.25rem;
 
       &:before {
@@ -38,12 +38,12 @@
         width: 1.25rem;
       }
 
-      span {
+      span { // text
+        font: 1.125rem/1 $font-family-headers;
         left: 2.25rem;
-        line-height: 1;
         padding-left: .5rem;
         position: absolute;
-        top: 0;
+        top: .0625rem;
         white-space: nowrap;
       }
     }
